--- a/coeus/.config/alacritty/alacritty.yml
+++ b/coeus/.config/alacritty/alacritty.yml
@@ -2,7 +2,7 @@ shell:
     program: /usr/bin/zsh
     args:
       - -c
-      - sleep 0.15 && yes "△▽" | head -n $(($(tput cols) / 2)) | tr "\n" "," | sed "s/,//g" | lolcat -F 0.03 && exec zsh
+      - sleep 0.15 && yes "△▽" | head -n $(($(tput cols) / 2)) | tr "\n" "," | sed "s/,//g" | lolcat -F 0.03 && echo && exec zsh
 
 window:
     padding:
