Update prometheus symlinks

--- a/prometheus/.config/starship.toml
+++ b/prometheus/.config/starship.toml
@@ -1,214 +1,1 @@
-format = """
-$time\
-$hg_branch\
-$docker_context\
-$package\
-$cmake\
-$dart\
-$dotnet\
-$elixir\
-$elm\
-$erlang\
-$golang\
-$helm\
-$java\
-$julia\
-$nim\
-$nodejs\
-$ocaml\
-$perl\
-$php\
-$purescript\
-$python\
-$ruby\
-$rust\
-$swift\
-$terraform\
-$zig\
-$nix_shell\
-$conda\
-$memory_usage\
-$aws\
-$gcloud\
-$openstack\
-$env_var\
-$crystal\
-$lua\
-$jobs\
-
-$git_commit\
-$git_state\
-$git_status\
-
-$fill\
-$cmd_duration\
-${custom.battery100}\
-${custom.battery75}\
-${custom.battery50}\
-${custom.battery25}\
-${custom.battery10}\
-${custom.batterycharging}\
-
-        $line_break\
-
-$directory\
-$git_branch\
-
-        $line_break\
-
-$username\
-$hostname\
-${custom.lvl}\
-$shell\
-$status\
-$character\
-"""
-
-command_timeout = 500
-
-[custom.battery100]
-command = "acpi | awk '{print $4}' | sed 's/,//g'"
-symbol = "  "
-style = "green"
-format = "[$symbol$output]($style) "
-when = "battery100"
-shell = ["bash"]
-
-[custom.battery75]
-command = "acpi | awk '{print $4}' | sed 's/,//g'"
-symbol = "  "
-style = "green"
-format = "[$symbol$output]($style) "
-when = "battery75"
-shell = ["bash"]
-
-[custom.battery50]
-command = "acpi | awk '{print $4}' | sed 's/,//g'"
-symbol = "  "
-style = "yellow"
-format = "[$symbol$output]($style) "
-when = "battery50"
-shell = ["bash"]
-
-[custom.battery25]
-command = "acpi | awk '{print $4}' | sed 's/,//g'"
-symbol = "  "
-style = "red"
-format = "[$symbol$output]($style) "
-when = "battery25"
-shell = ["bash"]
-
-[custom.battery10]
-command = "acpi | awk '{print $4}' | sed 's/,//g'"
-symbol = "  "
-style = "bold red"
-format = "[$symbol$output]($style) "
-when = "battery10"
-shell = ["bash"]
-
-[custom.batterycharging]
-command = "acpi | awk '{print $4}' | sed 's/,//g'"
-symbol = " "
-style = "#FFA570"
-format = "[$symbol$output]($style) "
-when = "batterycharging"
-shell = ["bash"]
-
-[character]
-success_symbol = "[](bold green)"
-vicmd_symbol = "[](bold yellow)"
-error_symbol = "[](bold red)"
-
-[fill]
-symbol = " "
-
-[cmd_duration]
-min_time = 1_000
-style = "#6A6A6A"
-format = "[$duration]($style) "
-
-[time]
-time_format = "%I:%M%p"
-format = "🕙 $time($style) "
-style = "bright-white"
-disabled = true
-
-[python]
-format = '[${symbol}(${version} )(\($virtualenv\) )]($style)'
-symbol = " "
-
-[nodejs]
-symbol = " "
-format = "[$symbol$version]($style) "
-
-[lua]
-symbol = " "
-format = "[$symbol$version]($style) "
-
-[cmake]
-symbol = "喝"
-format = "[$symbol$version]($style) "
-
-[ruby]
-symbol = " "
-format = "[$symbol$version]($style) "
-
-[package]
-disabled = true
-
-[jobs]
-symbol = ""
-format = "[$symbol]($style) "
-
-[git_branch]
-symbol = " "
-format = ' [$symbol$branch]($style) '
-
-[git_status]
-format = '([$all_status$ahead_behind]($style))'
-style = "white"
-conflicted = "𥉉 "
-ahead = "落×${count} "
-behind = " ×${count} "
-diverged = "落×${ahead_count}  ×${behind_count} "
-modified = " ×${count} "
-untracked = "﬒ ×${count} "
-stashed = "﬚  "
-staged = "ﳁ ×${count} "
-renamed = " ×${count} "
-deleted = " ×${count} "
-
-[username]
-show_always = true
-style_user = "bold cyan"
-format = "[$user]($style)@"
-disabled = true
-
-[hostname]
-ssh_only = false
-format = "[$hostname](blue): "
-disabled = true
-
-[directory]
-truncation_length = 8
-read_only = " "
-
-[directory.substitutions]
-"~/projects" = "projects"
-"~/Dropbox/uni/3F" = "uni"
-".dotfiles" = "dotfiles"
-
-[custom.lvl]
-command = "show_sh_lvl"
-when = "show_sh_lvl"
-style = "#FFA570"
-format = "[($output )]($style)"
-
-[shell]
-disabled = false
-fish_indicator = " "
-zsh_indicator = "ℤ "
-bash_indicator = " "
-unknown_indicator = " "
-xonsh_indicator = ""
-format = "$indicator"
+../../coeus/.config/starship.toml
