--- a/coeus/.config/kitty/kitty.conf
+++ b/coeus/.config/kitty/kitty.conf
@@ -4,8 +4,8 @@ shell                   zsh -c 'triangles && echo && exec zsh'
 # font
 font_family             Fira Code Retina Nerd Font Complete
 bold_font               Fira Code Bold Nerd Font Complete
-italic_font             auto
-bold_italic_font        auto
+italic_font             Hack Italic Nerd Font Complete
+bold_italic_font        Hack Bold Italic Nerd Font Complete
 
 font_size               16.0
 disable_ligatures       never
