--- a/coeus/.config/kitty/kitty.conf
+++ b/coeus/.config/kitty/kitty.conf
@@ -1,11 +1,18 @@
 # shell
 shell                   zsh -c 'triangles && echo && exec zsh'
+enable_audio_bell       no
 
-# font
+# performance
+repaint_delay           5
+
+# window padding     top sides bottom
+window_padding_width     0 5 2
+
+# font =>
 font_family             Fira Code Retina Nerd Font Complete
 bold_font               Fira Code Bold Nerd Font Complete
-italic_font             Hack Italic Nerd Font Complete
-bold_italic_font        Hack Bold Italic Nerd Font Complete
+italic_font             Fantasque Sans Mono Italic Nerd Font Complete
+bold_italic_font        Fantasque Sans Mono Bold Italic Nerd Font Complete
 
 font_size               16.0
 disable_ligatures       never
@@ -16,6 +23,8 @@ cursor_blink_interval   0
 # mouse
 mouse_hide_wait         -1.0
 copy_on_select          clipboard
+
+mouse_map ctrl+left press ungrabbed mouse_selection rectangle
 
 # =============================================================================
 # colors
@@ -28,7 +37,7 @@ cursor                  #EEFFFF
 selection_background    #FFCB6B
 selection_foreground    #303030
 color0                  #212121
-color8                  #4A4A4A
+color8                  #3a3a3a
 color1                  #F07178
 color9                  #F07178
 color2                  #C3E88D
@@ -39,7 +48,7 @@ color4                  #6c99ba
 color12                 #6c99ba
 color5                  #C792EA
 color13                 #C792EA
-color6                  #89DDFF
-color14                 #89DDFF
+color6                  #83c5be
+color14                 #83c5be
 color7                  #d0d0d0
 color15                 #f5f5f5
