--- a/coeus/.config/kitty/kitty.conf
+++ b/coeus/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # shell
-shell                   zsh -c 'triangles && echo && exec zsh'
+shell                   zsh -c 'tm startup || triangles && echo && exec zsh'
 enable_audio_bell       no
 
 # performance
@@ -8,11 +8,13 @@ repaint_delay           5
 # window padding     top sides bottom
 window_padding_width     0 5 2
 
-# font =>
+# font
 font_family             Fira Code Retina Nerd Font Complete
 bold_font               Fira Code Bold Nerd Font Complete
-italic_font             Fantasque Sans Mono Italic Nerd Font Complete
-bold_italic_font        Fantasque Sans Mono Bold Italic Nerd Font Complete
+# font_family             JetBrains Mono Regular Nerd Font Complete
+# bold_font               JetBrains Mono Bold Nerd Font Complete
+italic_font             JetBrains Mono Italic Nerd Font Complete Mono
+bold_italic_font        JetBrains Mono Bold Italic Nerd Font Complete
 
 font_size               16.0
 disable_ligatures       never
