--- a/coeus/.config/tmux/tmux.conf
+++ b/coeus/.config/tmux/tmux.conf
@@ -1,98 +1,96 @@
-set-option -g default-shell /usr/bin/fish
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-kitty"
 
-# 0 is too far from ` ;)
+# 1-indexed tabs
 set -g base-index 1
 
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-#set -g default-terminal screen-256color
-set -g status-keys vi
 set -g history-limit 10000
 
-setw -g mode-keys vi
+# vi mode in command prompt (:)
+set -g status-keys vi
 setw -g mouse on
 setw -g monitor-activity on
-
-# No delay for escape key press
+set -g bell-action none
+set -g visual-bell off
 set -sg escape-time 0
 
-# bind-key: key after prefix
-# bind: bind key itself
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
-# splits
-bind-key S split-window -h
+setw -g mode-keys vi
+bind-key ^[ if-shell "$is_vim" "send-keys ^[" "copy-mode"
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+
+# reload
+bind-key R source-file ~/.config/tmux/tmux.conf
+
+# panes (splits)
+bind-key v split-window -h
 bind-key s split-window -v
-bind-key w kill-pane
-bind-key x kill-window
+bind-key t if-shell "$is_vim" "split-window -v -p 20" ""
 
-# resizing
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-h resize-pane -L
-bind-key M-l resize-pane -R
 
-# Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
-# Use Alt-vim keys without prefix key to switch panes
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n M-h if-shell "$is_vim" "send-keys M-h" "select-pane -L"
+bind-key -n M-j if-shell "$is_vim" "send-keys M-j" "select-pane -D"
+bind-key -n M-k if-shell "$is_vim" "send-keys M-k" "select-pane -U"
+bind-key -n M-l if-shell "$is_vim" "send-keys M-l" "select-pane -R"
 
-bind-key -n M-h  if-shell  "$is_vim"  "send-keys M-h"  "select-pane -L"
-bind-key -n M-j   if-shell  "$is_vim"  "send-keys M-j"   "select-pane -D"
-bind-key -n M-k  if-shell  "$is_vim"  "send-keys M-k"  "select-pane -U"
-bind-key -n M-l   if-shell  "$is_vim"  "send-keys M-l"   "select-pane -R"
+bind-key -n M-Left  if-shell "$is_vim" "send-keys C-Left"   "resize-pane -L"
+bind-key -n M-Right if-shell "$is_vim" "send-keys C-Right"  "resize-pane -R"
+bind-key -n M-Up    if-shell "$is_vim" "send-keys C-Up"     "resize-pane -U"
+bind-key -n M-Down  if-shell "$is_vim" "send-keys C-Down"   "resize-pane -D"
 
-# new window
+# windows (tabs)
 bind-key n new-window
+bind-key r command-prompt -I "#W" "rename-window '%%'"
 
-# kill session
-bind-key q kill-session
+bind-key -n S-Right next-window
+bind-key -n S-Left  previous-window
+bind-key -n M-Tab if-shell "$is_vim" "send-keys M-Tab" "next-window"
 
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
+# kill
+bind-key Q kill-session
+bind-key q kill-window
+bind-key w kill-pane
+
+# commands
+bind-key Enter run-shell "tmux new-window -n 'launch' tm"
+bind-key c run-shell "tmux new-window -n 'cheat.sh' cht"
+bind-key p command-prompt -p "search from:" "split-window 'vs %%'"
+
+# unbind
+# unbind-key " "
 
 
-bind -n S-Up select-pane -U
-bind -n S-Down select-pane -D
-
-# Reload tmux config
-bind r source-file ~/.config/tmux/tmux.conf
-
-# THEME
+# styles
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 60
 set -g status-left-length 30
-set -g status-left '#[fg=cyan](#S) '
-set -g status-right '#[fg=white]%I:%M#[default]'
+set -g status-left '#[fg=colour237]#[fg=white,bg=colour237] #S #[fg=colour237,bg=black]#[default] '
+set -g status-right '#[fg=white]%I:%M%p#[default]'
 
-# set-window-option -g window-status-current-style bg=yellow
+setw -g window-status-style fg='yellow',bg='colour8'
+setw -g window-status-activity-style fg='orange blink',bg='colour237'
+setw -g window-status-current-style fg='yellow',bg='colour8'
+setw -g window-status-separator ' '
+setw -g window-status-format '#[fg=colour237,bg=black]#[default]#W#[fg=colour237,bg=black]'
+setw -g window-status-current-format '#[fg=colour237,bg=black]#[default bold]#W#[fg=colour237,bg=black]'
 
-# set -g status-bg 'colour235'
-# set -g status-justify 'centre'
-# set -g status-left-length '100'
-# set -g status 'on'
-# set -g pane-active-border-style fg='colour154'
-# set -g status-right-length '100'
-# set -g message-style fg='colour222',bg='colour238'
-# set -g message-command-style bg='colour238',fg='colour222'
-# set -g pane-border-style fg='colour238'
-setw -g window-status-style fg='colour121',bg='colour235'
-setw -g window-status-activity-style fg='colour154',bg='colour235'
-setw -g window-status-separator ''
-# set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] #(whoami)  #(uptime  | cut -d " " -f 1,2,3) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
-# set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
-setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
-setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #I  #W  #F #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
+# plugins
+run-shell ~/.config/tmux/plugins/resurrect.tmux
+set -g @resurrect-dir '~/.cache/tmux/sessions'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
