Force ltr in kitty

--- a/coeus/.config/kitty/kitty.conf
+++ b/coeus/.config/kitty/kitty.conf
@@ -18,6 +18,7 @@ bold_italic_font        JetBrains Mono Bold Italic Nerd Font Complete
 
 font_size               16.0
 disable_ligatures       never
+force_ltr               yes
 
 # cursor
 cursor_blink_interval   0
