Add tmux keybinds

--- a/coeus/.config/tmux/tmux.conf
+++ b/coeus/.config/tmux/tmux.conf
@@ -30,7 +30,7 @@ bind-key R source-file ~/.config/tmux/tmux.conf
 # panes (splits)
 bind-key v split-window -h
 bind-key s split-window -v
-bind-key t if-shell "$is_vim" "split-window -v -p 20" ""
+bind-key t split-window -v -p 20
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
@@ -66,9 +66,10 @@ bind-key q kill-window
 bind-key w kill-pane
 
 # commands
-bind-key Enter run-shell "tmux new-window -n 'launch' tm"
+bind-key Enter display-popup -E "tm"
 bind-key c run-shell "tmux new-window -n 'cheat.sh' cht"
 bind-key p command-prompt -p "search from:" "split-window 'vs %%'"
+bind-key P split-window "ve"
 
 # unbind
 # unbind-key " "
