--- a/coeus/.config/polybar/config.ini
+++ b/coeus/.config/polybar/config.ini
@@ -16,7 +16,8 @@
 
 bg = #DD151415
 invis = #00000000
-bg1 = #c02A282A
+;#ffffff55
+bg1 = #55ffffff
 fg = #eeeeee
 fg1 = #c1c2c3
 
@@ -133,18 +134,19 @@ icon-2 = 3;
 icon-3 = 4;
 icon-4 = 5;
 icon-5 = 6;
-icon-6 = NSP;
+icon-6 = 7;
+icon-7 = NSP;
 icon-default = 
 
 label-active = %icon%
 label-occupied = %icon%
 label-urgent = %icon%
-label-empty = 
+label-empty = %icon%
 label-empty-padding = 1
 label-active-padding = 1
 label-urgent-padding = 1
 label-occupied-padding = 1
-label-empty-foreground = ${color.fg}
+label-empty-foreground = ${color.bg1}
 label-active-foreground = ${color.cyan}
 label-urgent-foreground = ${color.orange}
 label-occupied-foreground = ${color.fg}
