Add swap-pane keybinds to tmux

--- a/coeus/.config/tmux/tmux.conf
+++ b/coeus/.config/tmux/tmux.conf
@@ -52,6 +52,11 @@ bind-key -n M-Right if-shell "$is_vim" "send-keys C-Right"  "resize-pane -R"
 bind-key -n M-Up    if-shell "$is_vim" "send-keys C-Up"     "resize-pane -U"
 bind-key -n M-Down  if-shell "$is_vim" "send-keys C-Down"   "resize-pane -D"
 
+bind-key C-h swap-pane -L
+bind-key C-j swap-pane -D
+bind-key C-k swap-pane -U
+bind-key C-l swap-pane -R
+
 # windows (tabs)
 bind-key n new-window
 bind-key r command-prompt -I "#W" "rename-window '%%'"
