--- a/coeus/.config/tmux/tmux.conf
+++ b/coeus/.config/tmux/tmux.conf
@@ -52,10 +52,8 @@ bind-key -n M-Right if-shell "$is_vim" "send-keys C-Right"  "resize-pane -R"
 bind-key -n M-Up    if-shell "$is_vim" "send-keys C-Up"     "resize-pane -U"
 bind-key -n M-Down  if-shell "$is_vim" "send-keys C-Down"   "resize-pane -D"
 
-bind-key C-h swap-pane -L
 bind-key C-j swap-pane -D
 bind-key C-k swap-pane -U
-bind-key C-l swap-pane -R
 
 # windows (tabs)
 bind-key n new-window
@@ -86,7 +84,7 @@ set -g status-fg white
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=colour237]#[fg=white,bg=colour237] #S #[fg=colour237,bg=black]#[default] '
-set -g status-right '#[fg=white]%I:%M%p#[default]'
+set -g status-right '#[fg=color#(battery color)]#(battery)#[default] / %a %b %d / %I:%M%p '
 
 setw -g window-status-style fg='yellow',bg='colour237'
 setw -g window-status-activity-style fg='orange blink',bg='colour237'
@@ -96,7 +94,7 @@ setw -g window-status-format '#[fg=colour237,bg=black]#[default]#W#[fg=colour
 setw -g window-status-current-format '#[fg=colour237,bg=black]#[default bold]#W#[fg=colour237,bg=black]'
 
 # plugins
-run-shell ~/.config/tmux/plugins/resurrect.tmux
-set -g @resurrect-dir '~/.cache/tmux/sessions'
-set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-capture-pane-contents 'on'
+# run-shell ~/.config/tmux/plugins/resurrect.tmux
+# set -g @resurrect-dir '~/.cache/tmux/sessions'
+# set -g @resurrect-strategy-nvim 'session'
+# set -g @resurrect-capture-pane-contents 'on'
