Add tmux split keybinds

--- a/coeus/.config/tmux/tmux.conf
+++ b/coeus/.config/tmux/tmux.conf
@@ -71,12 +71,10 @@ bind-key w kill-pane
 # commands
 bind-key Enter display-popup -E "tm"
 bind-key c run-shell "tmux new-window -n 'cheat.sh' cht"
-bind-key p command-prompt -p "search from:" "split-window 'vs %%'"
-bind-key P split-window "ve"
-
-# unbind
-# unbind-key " "
-
+bind-key p command-prompt -p "search from:" "split-window -h 'vs %%'"
+bind-key P command-prompt -p "search from:" "split-window -v 'vs %%'"
+bind-key e split-window -h "ve"
+bind-key E split-window -v "ve"
 
 # styles
 set -g status-bg black
@@ -92,9 +90,3 @@ setw -g window-status-current-style fg='yellow',bg='colour237'
 setw -g window-status-separator ' '
 setw -g window-status-format '#[fg=colour237,bg=black]#[default]#W#[fg=colour237,bg=black]'
 setw -g window-status-current-format '#[fg=colour237,bg=black]#[default bold]#W#[fg=colour237,bg=black]'
-
-# plugins
-# run-shell ~/.config/tmux/plugins/resurrect.tmux
-# set -g @resurrect-dir '~/.cache/tmux/sessions'
-# set -g @resurrect-strategy-nvim 'session'
-# set -g @resurrect-capture-pane-contents 'on'
