Sync tmux configs

--- a/prometheus/.config/tmux/tmux.conf
+++ b/prometheus/.config/tmux/tmux.conf
@@ -1,100 +1,1 @@
-set -g default-terminal "xterm-kitty"
-
-# 1-indexed tabs
-set -g base-index 1
-
-# Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
-
-set -g history-limit 10000
-
-# vi mode in command prompt (:)
-set -g status-keys vi
-setw -g mouse on
-setw -g monitor-activity on
-set -g bell-action none
-set -g visual-bell off
-set -sg escape-time 0
-
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-
-setw -g mode-keys vi
-bind-key ^[ if-shell "$is_vim" "send-keys ^[" "copy-mode"
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-
-# reload
-bind-key R source-file ~/.config/tmux/tmux.conf
-
-# panes (splits)
-bind-key v split-window -h
-bind-key s split-window -v
-bind-key t split-window -v -p 20
-
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
-
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-
-bind-key -n M-h if-shell "$is_vim" "send-keys M-h" "select-pane -L"
-bind-key -n M-j if-shell "$is_vim" "send-keys M-j" "select-pane -D"
-bind-key -n M-k if-shell "$is_vim" "send-keys M-k" "select-pane -U"
-bind-key -n M-l if-shell "$is_vim" "send-keys M-l" "select-pane -R"
-
-bind-key -n M-Left  if-shell "$is_vim" "send-keys C-Left"   "resize-pane -L"
-bind-key -n M-Right if-shell "$is_vim" "send-keys C-Right"  "resize-pane -R"
-bind-key -n M-Up    if-shell "$is_vim" "send-keys C-Up"     "resize-pane -U"
-bind-key -n M-Down  if-shell "$is_vim" "send-keys C-Down"   "resize-pane -D"
-
-bind-key C-j swap-pane -D
-bind-key C-k swap-pane -U
-
-# windows (tabs)
-bind-key n new-window
-bind-key r command-prompt -I "#W" "rename-window '%%'"
-
-bind-key -n S-Right next-window
-bind-key -n S-Left  previous-window
-bind-key -n M-Tab if-shell "$is_vim" "send-keys M-Tab" "next-window"
-
-# kill
-bind-key Q kill-session
-bind-key q kill-window
-bind-key w kill-pane
-
-# commands
-bind-key Enter display-popup -E "tm"
-bind-key c run-shell "tmux new-window -n 'cheat.sh' cht"
-bind-key p command-prompt -p "search from:" "split-window 'vs %%'"
-bind-key P split-window "ve"
-
-# unbind
-# unbind-key " "
-
-
-# styles
-set -g status-bg black
-set -g status-fg white
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-left '#[fg=colour237]#[fg=white,bg=colour237] #S #[fg=colour237,bg=black]#[default] '
-set -g status-right '#[fg=color#(battery color)]#(battery)#[default] / %a %b %d / %I:%M%p '
-
-setw -g window-status-style fg='yellow',bg='colour237'
-setw -g window-status-activity-style fg='orange blink',bg='colour237'
-setw -g window-status-current-style fg='yellow',bg='colour237'
-setw -g window-status-separator ' '
-setw -g window-status-format '#[fg=colour237,bg=black]#[default]#W#[fg=colour237,bg=black]'
-setw -g window-status-current-format '#[fg=colour237,bg=black]#[default bold]#W#[fg=colour237,bg=black]'
-
-# plugins
-# run-shell ~/.config/tmux/plugins/resurrect.tmux
-# set -g @resurrect-dir '~/.cache/tmux/sessions'
-# set -g @resurrect-strategy-nvim 'session'
-# set -g @resurrect-capture-pane-contents 'on'
+../../../coeus/.config/tmux/tmux.conf
