Tmux mouse toggle

--- a/coeus/.config/tmux/tmux.conf
+++ b/coeus/.config/tmux/tmux.conf
@@ -11,11 +11,15 @@ set -g history-limit 10000
 
 # vi mode in command prompt (:)
 set -g status-keys vi
-setw -g mouse on
+
+
 setw -g monitor-activity on
 set -g bell-action none
 set -g visual-bell off
 set -sg escape-time 0
+
+setw -g mouse on
+bind-key m set-option -g mouse\; display-message 'mouse #{?mouse,on,off}'
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
