--- a/coeus/.config/kitty/kitty.conf
+++ b/coeus/.config/kitty/kitty.conf
@@ -26,30 +26,54 @@ mouse_hide_wait         -1.0
 copy_on_select          clipboard
 
 mouse_map ctrl+left press ungrabbed mouse_selection rectangle
+mouse_map ctrl+shift+left press ungrabbed mouse_selection rectangle
 
 # =============================================================================
 # colors
 # =============================================================================
 
 # Custom
-background              #212121
-foreground              #d0d0d0
+background              #1B1923
+foreground              #D7DAE0
 cursor                  #EEFFFF
 selection_background    #FFCB6B
-selection_foreground    #303030
-color0                  #212121
-color8                  #4a4a4a
+selection_foreground    #1B1923
+color0                  #1B1923
+color8                  #6E6C7C
 color1                  #F07178
-color9                  #F07178
-color2                  #C3E88D
-color10                 #C3E88D
+color9                  #E28C8C
+color2                  #B3E1A3
+color10                 #B3E1A3
 color3                  #FFCB6B
 color11                 #FFA570
-color4                  #6c99ba
-color12                 #6c99ba
-color5                  #C792EA
-color13                 #C792EA
-color6                  #83c5be
-color14                 #83c5be
-color7                  #d0d0d0
-color15                 #f5f5f5
+color4                  #A4B9EF
+color12                 #A4B9EF
+color5                  #C6AAE8
+color13                 #C6AAE8
+color6                  #C2E7F0
+color14                 #C2E7F0
+color7                  #D7DAE0
+color15                 #D7DAE0
+
+# Old
+# background              #212121
+# foreground              #d0d0d0
+# cursor                  #EEFFFF
+# selection_background    #FFCB6B
+# selection_foreground    #303030
+# color0                  #212121
+# color8                  #4a4a4a
+# color1                  #F07178
+# color9                  #F07178
+# color2                  #C3E88D
+# color10                 #C3E88D
+# color3                  #FFCB6B
+# color11                 #FFA570
+# color4                  #6c99ba
+# color12                 #6c99ba
+# color5                  #C792EA
+# color13                 #C792EA
+# color6                  #83c5be
+# color14                 #83c5be
+# color7                  #d0d0d0
+# color15                 #f5f5f5
