--- a/coeus/.config/kitty/kitty.conf
+++ b/coeus/.config/kitty/kitty.conf
@@ -33,12 +33,12 @@ mouse_map ctrl+shift+left press ungrabbed mouse_selection rectangle
 # =============================================================================
 
 # Custom
-background              #1B1923
+background              #212121
 foreground              #D7DAE0
 cursor                  #EEFFFF
 selection_background    #FFCB6B
-selection_foreground    #1B1923
-color0                  #1B1923
+selection_foreground    #212121
+color0                  #212121
 color8                  #6E6C7C
 color1                  #F07178
 color9                  #E28C8C
@@ -50,8 +50,8 @@ color4                  #A4B9EF
 color12                 #A4B9EF
 color5                  #C6AAE8
 color13                 #C6AAE8
-color6                  #C2E7F0
-color14                 #C2E7F0
+color6                  #8CDBCD
+color14                 #8CDBCD
 color7                  #D7DAE0
 color15                 #D7DAE0
 
