--- a/coeus/.config/tmux/tmux.conf
+++ b/coeus/.config/tmux/tmux.conf
@@ -86,7 +86,7 @@ set -g status-fg white
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-right-length 200
-set -g status-left '#[fg=colour237]#[fg=white,bg=colour237] #S #[fg=colour237,bg=black]#[default] '
+set -g status-left '#[fg=colour237]#[fg=color#(session-color),bg=colour237, italics] #S #[fg=colour237,bg=black]#[default] '
 set -g status-right '#(tmux-song) #[fg=color#(battery color)]#(battery)#[default] / %a %b %d / %I:%M%p '
 
 setw -g window-status-style fg='yellow',bg='colour237'
