Update tmux config

--- a/coeus/.config/tmux/tmux.conf
+++ b/coeus/.config/tmux/tmux.conf
@@ -1,32 +1,41 @@
 set -g default-terminal "xterm-kitty"
 
-# 1-indexed tabs
+set -g history-limit 10000
+
+# 1-indexed windows
 set -g base-index 1
 
-# Automatically set window title
+# auto-name windows if no name is set
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-set -g history-limit 10000
-
-# vi mode in command prompt (:)
-set -g status-keys vi
-
-
+# watch for background window activity
 setw -g monitor-activity on
 set -g bell-action none
 set -g visual-bell off
 set -sg escape-time 0
 
+# Key Bindings
+
+# prefix: C-Space
+set -g prefix C-@
+
+# command to check if in nvim
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+setw -g mode-keys vi
+
+# toggle mouse support with m
 setw -g mouse on
 bind-key m set-option -g mouse\; display-message 'mouse #{?mouse,on,off}'
 
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-
-setw -g mode-keys vi
 bind-key ^[ if-shell "$is_vim" "send-keys ^[" "copy-mode"
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+
+# don't auto deselect
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear
+# leave copy-mode with scroll down
+bind -n MouseDrag1Pane if -Ft= '#{mouse_any_flag}' 'if -Ft= \"#{pane_in_mode}\" \"copy-mode -eM\" \"send-keys -M\"' 'copy-mode -eM'
 
 # reload
 bind-key R source-file ~/.config/tmux/tmux.conf
@@ -59,7 +68,7 @@ bind-key -n M-Down  if-shell "$is_vim" "send-keys C-Down"   "resize-pane -D"
 bind-key C-j swap-pane -D
 bind-key C-k swap-pane -U
 
-# windows (tabs)
+# windows
 bind-key n new-window
 bind-key r command-prompt -I "#W" "rename-window '%%'"
 
@@ -72,7 +81,7 @@ bind-key Q kill-session
 bind-key q kill-window
 bind-key w kill-pane
 
-# commands
+# custom commands
 bind-key Enter display-popup -E "tm"
 bind-key c run-shell "tmux new-window -n 'cheat.sh' cht"
 bind-key p command-prompt -p "search from:" "split-window -h 'vs %%'"
@@ -80,18 +89,21 @@ bind-key P command-prompt -p "search from:" "split-window -v 'vs %%'"
 bind-key e split-window -h "ve"
 bind-key E split-window -v "ve"
 
-# styles
+# Styles
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-right-length 200
-set -g status-left '#[fg=colour237]#[fg=color#(session-color),bg=colour237, italics] #S #[fg=colour237,bg=black]#[default] '
-set -g status-right '#(tmux-song) #[fg=color#(battery color)]#(battery)#[default] / %a %b %d / %I:%M%p '
+set -g status-left '#[fg=black,bg=cyan]  #S #[fg=cyan,bg=black]#[default] '
+set -g status-right '#[fg=color8]#(tmux-song) #[fg=color#(battery color)]#(battery) #[fg=color15]#[fg=cyan, bg=color15]  %a %b %d #[fg=cyan]#[fg=black, bg=cyan] %I:%M%p '
 
-setw -g window-status-style fg='yellow',bg='colour237'
-setw -g window-status-activity-style fg='orange blink',bg='colour237'
-setw -g window-status-current-style fg='yellow',bg='colour237'
+setw -g window-status-style fg='color8',bg='color15'
+setw -g window-status-activity-style fg='orange blink',bg='colour15'
+setw -g window-status-current-style fg='cyan',bg='colour15'
 setw -g window-status-separator ' '
 setw -g window-status-format '#[fg=colour237,bg=black]#[default]#W#[fg=colour237,bg=black]'
-setw -g window-status-current-format '#[fg=colour237,bg=black]#[default bold]#W#[fg=colour237,bg=black]'
+setw -g window-status-current-format '#[fg=color15,bg=black]#[default]#W#[fg=colour15,bg=black]'
+
+set-option -ga pane-active-border-style bg=default,fg=color8
+set-option -ga pane-border-style bg=default,fg=color8
