--- a/coeus/.config/tmux/tmux.conf
+++ b/coeus/.config/tmux/tmux.conf
@@ -96,7 +96,7 @@ set -g status-interval 60
 set -g status-left-length 30
 set -g status-right-length 200
 set -g status-left '#[fg=black,bg=cyan]  #S #[fg=cyan,bg=black]#[default] '
-set -g status-right '#[fg=color8]#(tmux-song) #[fg=color#(battery color)]#(battery) #[fg=color15]#[fg=cyan, bg=color15]  %a %b %d #[fg=cyan]#[fg=black, bg=cyan] %I:%M%p '
+set -g status-right '#[fg=color8]#(tmux-song) #(tmux-battery) #[fg=color15]#[fg=cyan, bg=color15]  %a %b %d #[fg=cyan]#[fg=black, bg=cyan] %I:%M%p '
 
 setw -g window-status-style fg='color8',bg='color15'
 setw -g window-status-activity-style fg='orange blink',bg='colour15'
