--- a/coeus/.config/tmux/tmux.conf
+++ b/coeus/.config/tmux/tmux.conf
@@ -34,8 +34,8 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # don't auto deselect
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear
-# leave copy-mode with scroll down
-bind -n MouseDrag1Pane if -Ft= '#{mouse_any_flag}' 'if -Ft= \"#{pane_in_mode}\" \"copy-mode -eM\" \"send-keys -M\"' 'copy-mode -eM'
+# leave copy-mode with esc
+bind-key -T copy-mode-vi ^[ send-keys -X cancel
 
 # reload
 bind-key R source-file ~/.config/tmux/tmux.conf
