Add copy mode bindings

--- a/coeus/.config/tmux/tmux.conf
+++ b/coeus/.config/tmux/tmux.conf
@@ -34,8 +34,17 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # don't auto deselect
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear
+
+# Copy Mode Bindings
+
 # leave copy-mode with esc
 bind-key -T copy-mode-vi ^[ send-keys -X cancel
+
+bind-key -T copy-mode-vi H send-keys -X start-of-line
+bind-key -T copy-mode-vi L send-keys -X end-of-line
+bind-key -T copy-mode-vi Y send-keys -X copy-line
+
+# Normal Bindings
 
 # reload
 bind-key R source-file ~/.config/tmux/tmux.conf
