--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -78,26 +78,23 @@ font-3 = Hack Nerd Font Mono:size=24:antialias=true;7
 font-4 = Hack Nerd Font Mono:size=14:antialias=true;4
 font-5 = Fira Code Nerd Font:size=14:style=Regular Condensed;3
 
-
-[bar/laptop]
-inherit = bar/base
-monitor = DP3
-monitor-fallback = eDP1
-bottom = false
-modules-left = search workspaces
-modules-center = spotify spotify-prev spotify-play-pause spotify-next
-modules-right = cpu memory battery volume internet date powermenu
-
-
-[bar/desktop]
+[bar/coeus]
 inherit = bar/base
 monitor = DP-4
 monitor-fallback = HDMI-0
 bottom = false
 modules-left = search workspaces
-modules-center = spotify spotify-prev spotify-play-pause spotify-next
-modules-right = cpu memory volume ethernet date powermenu
+modules-center = now-playing prev-song play-pause next-song
+modules-right = cpu memory volume ethernet date-time powermenu
 
+[bar/prometheus]
+inherit = bar/base
+monitor = DP3
+monitor-fallback = eDP1
+bottom = false
+modules-left = search workspaces
+modules-center = now-playing prev-song play-pause next-song
+modules-right = cpu memory battery volume wifi date-time powermenu
 
 [bar/alt]
 inherit = bar/base
@@ -125,7 +122,7 @@ enable-scroll = false
 
 format = <label-state>
 format-font = 6
-format-background = ${color.shade2}
+format-background = ${color.bg}
 format-padding = 0
 
 icon-0 = 1;
@@ -151,34 +148,71 @@ label-active-foreground = ${color.cyan}
 label-urgent-foreground = ${color.orange}
 label-occupied-foreground = ${color.fg}
 
-[module/spotify]
+[module/now-playing]
 type = custom/script
 tail = true
 format = <label>
-exec = ~/.config/polybar/scripts/get_spotify_status.sh
+exec = ~/.config/polybar/scripts/now-playing
 click-left = focus-spotify
+interval = 1
 
-[module/spotify-prev]
+[module/prev-song]
 type = custom/text
 content = 玲
 content-font = 5
 content-foreground = ${color.fg}
 click-left = playerctl -p spotify previous
 
-[module/spotify-play-pause]
+[module/play-pause]
 type = custom/ipc
 hook-0 = echo ""
 hook-1 = echo "契"
 format-font = 5
 initial = 1
-click-left = playerctl -p spotify play-pause
+click-left = ~/.config/polybar/scripts/play-pause
 
-[module/spotify-next]
+[module/next-song]
 type = custom/text
 content = 怜
 content-font = 5
 content-foreground = ${color.fg}
 click-left = playerctl -p spotify next
+
+[module/cpu]
+type = internal/cpu
+interval = 2
+format = <ramp-load>
+format-foreground = ${color.pink}
+ramp-load-8 = █
+ramp-load-7 = ▇
+ramp-load-6 = ▆
+ramp-load-5 = ▅
+ramp-load-4 = ▄
+ramp-load-3 = ▃
+ramp-load-2 = ▂
+ramp-load-1 = ▁
+ramp-load-0 =
+; format-prefix = "%{T2}󰧑%{T-} "
+format-prefix-foreground = ${color.fg}
+format-underline = ${color.pink}
+label = %percentage%%
+
+[module/memory]
+type = internal/memory
+interval = 2
+; format-prefix = "%{T2}%{T-} "
+format = <ramp-used>
+format-foreground = ${color.cyan}
+ramp-used-8 = █
+ramp-used-7 = ▇
+ramp-used-6 = ▆
+ramp-used-5 = ▅
+ramp-used-4 = ▄
+ramp-used-3 = ▃
+ramp-used-2 = ▂
+ramp-used-1 = ▁
+ramp-used-0 =
+label = %percentage_used%%
 
 [module/battery]
 type = internal/battery
@@ -236,7 +270,7 @@ ramp-10 = 
 ramp-11 = 
 ramp-12 = 
 
-[module/internet]
+[module/wifi]
 type = internal/network
 interface = wlp59s0
 interval = 3.0
@@ -267,7 +301,7 @@ label-disconnected-foreground = #6c809e
 label-packetloss = 
 format-packetloss-foreground = #ffa64c
 
-[module/date]
+[module/date-time]
 type = internal/date
 interval = 5
 date = %a %b %e
@@ -278,40 +312,4 @@ label = %date%   %time%
 type = custom/text
 content = 󰐥
 content-foreground = ${color.red}
-click-left = ~/.config/polybar/scripts/powermenu.sh
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format = <ramp-load>
-format-foreground = ${color.pink}
-ramp-load-8 = █
-ramp-load-7 = ▇
-ramp-load-6 = ▆
-ramp-load-5 = ▅
-ramp-load-4 = ▄
-ramp-load-3 = ▃
-ramp-load-2 = ▂
-ramp-load-1 = ▁
-ramp-load-0 =
-; format-prefix = "%{T2}󰧑%{T-} "
-format-prefix-foreground = ${colors.foreground}
-format-underline = ${colors.grey}
-label = %percentage%%
-
-[module/memory]
-type = internal/memory
-interval = 2
-; format-prefix = "%{T2}%{T-} "
-format = <ramp-used>
-format-foreground = ${color.cyan}
-ramp-used-8 = █
-ramp-used-7 = ▇
-ramp-used-6 = ▆
-ramp-used-5 = ▅
-ramp-used-4 = ▄
-ramp-used-3 = ▃
-ramp-used-2 = ▂
-ramp-used-1 = ▁
-ramp-used-0 =
-label = %percentage_used%%
+click-left = ~/.config/polybar/scripts/powermenu
