--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -52,7 +52,7 @@ tray-position = none
 width = 99%
 height = 40
 offset-x = 0.5%
-offset-y = 0.5%
+offset-y = 0.3%
 
 cursor-click = pointer
 
@@ -78,6 +78,7 @@ font-3 = Hack Nerd Font Mono:size=24:antialias=true;7
 font-4 = Hack Nerd Font Mono:size=14:antialias=true;4
 font-5 = Fira Code Nerd Font:size=14:style=Regular Condensed;3
 
+
 [bar/coeus]
 inherit = bar/base
 monitor = DP-4
@@ -92,9 +93,9 @@ inherit = bar/base
 monitor = DP3
 monitor-fallback = eDP1
 bottom = false
-modules-left = search workspaces
+modules-left = workspaces
 modules-center = now-playing prev-song play-pause next-song
-modules-right = cpu memory battery volume wifi date-time powermenu
+modules-right = cpu memory volume wifi battery date-time powermenu
 
 [bar/alt]
 inherit = bar/base
@@ -103,7 +104,7 @@ modules-right = cpu memory
 
 [module/search]
 type = custom/text
-content = "  "
+content = "  "
 content-foreground = ${color.fg}
 click-left = ~/.config/polybar/scripts/search &
 
@@ -168,7 +169,7 @@ type = custom/ipc
 hook-0 = echo ""
 hook-1 = echo "契"
 format-font = 5
-initial = 1
+initial = 2
 click-left = ~/.config/polybar/scripts/play-pause
 
 [module/next-song]
@@ -218,25 +219,33 @@ label = %percentage_used%%
 type = internal/battery
 battery = BAT0
 adapter = ADP1
-full-at = 98
-label-active-font = 4
-format-charging = <animation-charging>  <label-charging>
-format-discharging = <ramp-capacity>  <label-discharging>
-label-charging = %percentage%%
-label-discharging = %percentage%%
+full-at = 95
+ramp-capacity-font = 5
+animation-charging-font = 3
+format-charging = "  <animation-charging>"
+format-discharging = "  <ramp-capacity>"
+; label-charging = %percentage%%
+; label-discharging = %percentage%%
 format-full-prefix = " "
 format-full-prefix-foreground = ${colors.fg}
-ramp-capacity-0 = ""
-ramp-capacity-1 = ""
-ramp-capacity-2 = ""
-ramp-capacity-3 = ""
-ramp-capacity-4 = ""
+ramp-capacity-0=""
+ramp-capacity-1=""
+ramp-capacity-2=""
+ramp-capacity-3=""
+ramp-capacity-4=""
+ramp-capacity-5=""
+ramp-capacity-6=""
+ramp-capacity-7=""
+ramp-capacity-8=""
+ramp-capacity-9=""
+ramp-capacity-10=""
 ramp-capacity-foreground = ${colors.fg}
-animation-charging-0 = ""
-animation-charging-1 = ""
-animation-charging-2 = ""
-animation-charging-3 = ""
-animation-charging-4 = ""
+animation-charging-0=""
+animation-charging-1=""
+animation-charging-2=""
+animation-charging-3=""
+animation-charging-4=""
+animation-charging-5=""
 animation-charging-foreground = ${colors.fg}
 animation-charging-framerate = 750
 
@@ -251,6 +260,7 @@ label-volume-foreground = ${color.fg}
 label-muted = 󰸈
 format-muted-foreground = ${color.fg}
 click-right = pavucontrol &
+
 
 [module/backlight]
 type = internal/xbacklight
