--- a/global/dot-config/kitty/kitty.conf
+++ b/global/dot-config/kitty/kitty.conf
@@ -5,8 +5,8 @@ enable_audio_bell       no
 # performance
 repaint_delay           5
 
-# window padding       top    sides   bottom
-window_padding_width    0       2       0
+# window margin
+single_window_margin_width 0.5
 
 # font
 
