--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -40,8 +40,8 @@ grey2 = #5bf1c9
 ;==========================================================
 
 [global/wm]
-margin-bottom = 5%
-margin-top = 5%
+margin-bottom = 5px
+margin-top = 0
 
 [bar/base]
 monitor-strict = false
@@ -52,7 +52,7 @@ tray-position = none
 width = 99%
 height = 40
 offset-x = 0.5%
-offset-y = 0.3%
+offset-y = 5px
 
 cursor-click = pointer
 
