--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -16,10 +16,8 @@
 
 bg = #DD151415
 invis = #00000000
-;#ffffff55
-bg1 = #55ffffff
 fg = #eeeeee
-fg1 = #c1c2c3
+grey = #55ffffff
 
 red = #fb4934
 green = #1DB954
@@ -30,7 +28,6 @@ pink = #d3869b
 aqua = #8ec07c
 cyan = #4ec9b0
 orange = #fe8019
-grey = #5b51c9
 
 white = #dddddd
 blueA = #83afe1
@@ -95,7 +92,7 @@ monitor-fallback = eDP1
 bottom = false
 modules-left = workspaces
 modules-center = now-playing prev-song play-pause next-song
-modules-right = cpu memory volume wifi battery date-time powermenu
+modules-right = cpu memory volume backlight battery wifi  date-time powermenu
 
 [bar/alt]
 inherit = bar/base
@@ -144,7 +141,7 @@ label-empty-padding = 1
 label-active-padding = 1
 label-urgent-padding = 1
 label-occupied-padding = 1
-label-empty-foreground = ${color.bg1}
+label-empty-foreground = ${color.grey}
 label-active-foreground = ${color.cyan}
 label-urgent-foreground = ${color.orange}
 label-occupied-foreground = ${color.fg}
@@ -153,9 +150,11 @@ label-occupied-foreground = ${color.fg}
 type = custom/script
 tail = true
 format = <label>
+format-prefix = "  "
+format-prefix-font = 3
 exec = ~/.config/polybar/scripts/now-playing
 click-left = focus-spotify
-interval = 1
+interval = 2
 
 [module/prev-song]
 type = custom/text
@@ -219,15 +218,18 @@ label = %percentage_used%%
 type = internal/battery
 battery = BAT0
 adapter = ADP1
-full-at = 95
 ramp-capacity-font = 5
 animation-charging-font = 3
-format-charging = "  <animation-charging>"
-format-discharging = "  <ramp-capacity>"
-; label-charging = %percentage%%
-; label-discharging = %percentage%%
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.fg}
+; label-charging-foreground = ${color.grey}
+; label-discharging-foreground = ${color.grey}
+; label-full-foreground = ${color.grey}
+format-charging = "<animation-charging>  <label-charging> "
+format-discharging = "<ramp-capacity>  <label-discharging> "
+format-full-prefix-font = 5
+format-full-prefix = " "
+; format-full-prefix-foreground = ${color.green}
+format-full = "<label-full> "
+; format-full = "  <label-full>"
 ramp-capacity-0=""
 ramp-capacity-1=""
 ramp-capacity-2=""
@@ -251,49 +253,46 @@ animation-charging-framerate = 750
 
 [module/volume]
 type = internal/pulseaudio
-format-volume = <ramp-volume>
+use-ui-max = false
+format-volume = "<ramp-volume> <label-volume>  "
 ramp-volume-0 = 󰕿
 ramp-volume-1 = 󰖀
 ramp-volume-2 = 󰕾
 ramp-volume-3 = 
 label-volume-foreground = ${color.fg}
-label-muted = 󰸈
+label-muted = "󰸈 "
 format-muted-foreground = ${color.fg}
 click-right = pavucontrol &
 
 
 [module/backlight]
 type = internal/xbacklight
-enable-scroll = false
-format = <ramp>
+enable-scroll = true
+format = "<ramp>  <label>  "
+; 
 ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-ramp-5 = 
-ramp-6 = 
-ramp-7 = 
-ramp-8 = 
-ramp-9 = 
-ramp-10 = 
-ramp-11 = 
-ramp-12 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+ramp-5 = 
 
 [module/wifi]
 type = internal/network
 interface = wlp59s0
 interval = 3.0
-format-connected =<ramp-signal>
+format-connected = "<ramp-signal>"
 label-connected = %essid%
 label-disconnected = 󰤭
-label-disconnected-foreground = #6c809e
-ramp-signal-0 = %{F#ff004b}󰤫%{F-}
-ramp-signal-1 = %{F#ffd200}󰤟%{F-}
+label-disconnected-foreground = ${color.red}
+ramp-signal-0 = 󰤫
+ramp-signal-1 = 󰤟
 ramp-signal-2 = 󰤢
 ramp-signal-3 = 󰤥
 ramp-signal-4 = 󰤨
-ramp-signal-foreground = ${colors.foreground-alt}
+ramp-signal-0-foreground = ${color.red}
+ramp-signal-1-foreground = ${color.yellow}
+ramp-signal-foreground = ${color.fg}
 
 [module/ethernet]
 type = internal/network
