Tweak polybar now playing

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -150,8 +150,8 @@ label-occupied-foreground = ${color.fg}
 type = custom/script
 tail = true
 format = <label>
-format-prefix = "  "
-format-prefix-font = 3
+format-prefix = " "
+format-prefix-font = 5
 exec = ~/.config/polybar/scripts/now-playing
 click-left = focus-spotify
 interval = 2
