tweak battery displays

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -227,7 +227,7 @@ format-charging = "<animation-charging>  <label-charging> "
 format-discharging = "<ramp-capacity>  <label-discharging> "
 format-full-prefix-font = 5
 format-full-prefix = " "
-; format-full-prefix-foreground = ${color.green}
+format-full-prefix-foreground = ${color.green}
 format-full = "<label-full> "
 ; format-full = "  <label-full>"
 ramp-capacity-0=""
@@ -241,14 +241,19 @@ ramp-capacity-7=""
 ramp-capacity-8=""
 ramp-capacity-9=""
 ramp-capacity-10=""
-ramp-capacity-foreground = ${colors.fg}
+ramp-capacity-0-foreground = ${color.red}
+ramp-capacity-1-foreground = ${color.red}
+ramp-capacity-2-foreground = ${color.orange}
+ramp-capacity-3-foreground = ${color.yellow}
+ramp-capacity-10-foreground = ${color.green}
+ramp-capacity-foreground = ${color.fg}
 animation-charging-0=""
 animation-charging-1=""
 animation-charging-2=""
 animation-charging-3=""
 animation-charging-4=""
 animation-charging-5=""
-animation-charging-foreground = ${colors.fg}
+animation-charging-foreground = ${color.fg}
 animation-charging-framerate = 750
 
 [module/volume]
