--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -46,9 +46,9 @@ monitor-exact = true
 override-redirect = true
 tray-position = none
 
-width = 99%
+width = 99.5%
 height = 40
-offset-x = 0.5%
+offset-x = 0.25%
 offset-y = 5px
 
 cursor-click = pointer
@@ -94,10 +94,19 @@ modules-left = workspaces
 modules-center = now-playing prev-song play-pause next-song
 modules-right = cpu memory volume backlight battery wifi  date-time powermenu
 
-[bar/alt]
+[bar/tickerbar]
 inherit = bar/base
 bottom = true
-modules-right = cpu memory
+modules-center = ticker
+
+[module/ticker]
+type = custom/script
+exec = ~/.config/polybar/scripts/ticker-scroll
+tail = true
+; label-foreground = ${color.green}
+format = <label>
+; click-left = focus-spotify
+; interval = 2
 
 [module/search]
 type = custom/text
@@ -245,7 +254,6 @@ ramp-capacity-0-foreground = ${color.red}
 ramp-capacity-1-foreground = ${color.red}
 ramp-capacity-2-foreground = ${color.orange}
 ramp-capacity-3-foreground = ${color.yellow}
-ramp-capacity-10-foreground = ${color.green}
 ramp-capacity-foreground = ${color.fg}
 animation-charging-0=""
 animation-charging-1=""
