toggle term in tmux!

--- a/global/dot-config/tmux/tmux.conf
+++ b/global/dot-config/tmux/tmux.conf
@@ -52,7 +52,10 @@ bind-key R source-file ~/.config/tmux/tmux.conf
 # panes (splits)
 bind-key v split-window -h
 bind-key s split-window -v
-bind-key t split-window -v -p 20
+
+no_bot="tmux list-panes -F '#{pane_at_top} #{pane_at_bottom}' | grep -q '1 1'"
+is_zoomed="tmux list-panes -F '#F' | grep -q Z"
+bind-key t if-shell "$no_bot" ' if-shell "$is_zoomed" "resize-pane -Z" "split-window -v -p 30"' "resize-pane -Z"
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
