--- a/global/dot-config/kitty/kitty.conf
+++ b/global/dot-config/kitty/kitty.conf
@@ -6,7 +6,8 @@ enable_audio_bell       no
 repaint_delay           5
 
 # window margin
-single_window_margin_width 0.5
+single_window_margin_width 0.5 2 0.5 2
+window_padding_width 0.5 2 0.5 2
 
 # font
 
