--- a/raspberrypi/.config/tmux/tmux.conf
+++ b/raspberrypi/.config/tmux/tmux.conf
@@ -106,12 +106,12 @@ set -g status-fg white
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-right-length 200
-set -g status-left '#[fg=black,bg=cyan]  #S #[fg=cyan,bg=black]#[default] '
-set -g status-right '#[fg=color8]#(tmux-song)#(tmux-battery)#[fg=color15]#[fg=cyan, bg=color15]  %a %b %d #[fg=cyan]#[fg=black, bg=cyan] %I:%M%p '
+set -g status-left '#[fg=black,bg=red]  #S #[fg=red,bg=black]#[default] '
+set -g status-right '#[fg=color8]#(tmux-song)#(tmux-battery)#[fg=color15]#[fg=red, bg=color15]  %a %b %d #[fg=red]#[fg=black, bg=red] %I:%M%p '
 
 setw -g window-status-style fg='color8',bg='color15'
 setw -g window-status-activity-style fg='orange blink',bg='colour15'
-setw -g window-status-current-style fg='cyan',bg='colour15'
+setw -g window-status-current-style fg='red',bg='colour15'
 setw -g window-status-separator ' '
 setw -g window-status-format '#[fg=colour237,bg=black]#[default]#W#[fg=colour237,bg=black]'
 setw -g window-status-current-format '#[fg=color15,bg=black]#[default]#W#[fg=colour15,bg=black]'
