--- a/global/dot-config/starship.toml
+++ b/global/dot-config/starship.toml
@@ -140,7 +140,7 @@ disabled = true
 
 [hostname]
 ssh_only = true
-format = "[$hostname](blue): "
+format = "[$hostname](bold red) "
 disabled = false
 
 [directory]
