--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -68,12 +68,14 @@ module-margin-right = 2
 
 enable-ipc = true
 
+; font-N = <fontconfig pattern>;<vertical offset>
 font-0 = BreezeSans:pixelsize=12:style=Medium Condensed;4
-font-1 = Material Design Icons Desktop:pixelsize=18;5
+font-1 = JetBrains Mono Nerd Font:size=14:style=Regular;4
 font-2 = BreezeSans:pixelsize=10:style=Bold Condensed;3
 font-3 = Hack Nerd Font Mono:size=24:antialias=true;7
 font-4 = Hack Nerd Font Mono:size=14:antialias=true;4
 font-5 = Fira Code Nerd Font:size=14:style=Regular Condensed;3
+font-6 = Material Design Icons Desktop:pixelsize=18;6
 
 
 [bar/coeus]
@@ -159,9 +161,8 @@ label-occupied-foreground = ${color.fg}
 type = custom/script
 tail = true
 format = <label>
-format-prefix = " "
-format-prefix-font = 5
-exec = ~/.config/polybar/scripts/now-playing
+; label-font = 2
+exec = get-song
 click-left = focus-spotify
 interval = 2
 
@@ -276,7 +277,6 @@ label-volume-foreground = ${color.fg}
 label-muted = "󰸈 "
 format-muted-foreground = ${color.fg}
 click-right = pavucontrol &
-
 
 [module/backlight]
 type = internal/xbacklight
