Tweak polybar fonts and spacing

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -70,7 +70,7 @@ enable-ipc = true
 
 ; font-N = <fontconfig pattern>;<vertical offset>
 font-0 = BreezeSans:pixelsize=12:style=Medium Condensed;4
-font-1 = JetBrains Mono Nerd Font:size=14:style=Regular;4
+font-1 = JetBrains Mono Nerd Font:size=14:style=Regular;5
 font-2 = BreezeSans:pixelsize=10:style=Bold Condensed;3
 font-3 = Hack Nerd Font Mono:size=24:antialias=true;7
 font-4 = Hack Nerd Font Mono:size=14:antialias=true;4
@@ -272,7 +272,7 @@ format-volume = "<ramp-volume> <label-volume>  "
 ramp-volume-0 = 󰕿
 ramp-volume-1 = 󰖀
 ramp-volume-2 = 󰕾
-ramp-volume-3 = 
+ramp-volume-3 = "   "
 label-volume-foreground = ${color.fg}
 label-muted = "󰸈 "
 format-muted-foreground = ${color.fg}
@@ -280,8 +280,9 @@ click-right = pavucontrol &
 
 [module/backlight]
 type = internal/xbacklight
+card = intel_backlight
 enable-scroll = true
-format = "<ramp>  <label>  "
+format = "<ramp>   <label>  "
 ; 
 ramp-0 = 
 ramp-1 = 
