Tweak polybar icon fonts

--- a/global/dot-config/polybar/config.ini
+++ b/global/dot-config/polybar/config.ini
@@ -75,7 +75,10 @@ font-2 = BreezeSans:pixelsize=10:style=Bold Condensed;3
 font-3 = Hack Nerd Font Mono:size=24:antialias=true;7
 font-4 = Hack Nerd Font Mono:size=14:antialias=true;4
 font-5 = Fira Code Nerd Font:size=14:style=Regular Condensed;3
+; volume icons
 font-6 = Material Design Icons Desktop:pixelsize=18;6
+; wifi icon
+font-7 = Material Design Icons Desktop:pixelsize=18;4
 
 
 [bar/coeus]
@@ -307,6 +310,7 @@ ramp-signal-4 = 󰤨
 ramp-signal-0-foreground = ${color.red}
 ramp-signal-1-foreground = ${color.yellow}
 ramp-signal-foreground = ${color.fg}
+ramp-signal-font = 8
 
 [module/ethernet]
 type = internal/network
